[package]
name = "awaitable-bool"
version = "0.1.3"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["J / Jacob Babich <jacobbabichpublic+git@gmail.com>"]
edition = "2021"
description = "A Tokio-powered awaitable bool (analogous to a flag and highly inspired by Python's `asyncio.Event`, but can be waited for to become 'false' too)"
categories = ["asynchronous", "concurrency"]
keywords = ["bool", "flag", "async", "tokio", "event"]
repository = "https://github.com/babichjacob/awaitable-bool"

[dependencies]
tokio = { version = "1.23", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.23", features = ["macros", "rt", "time"] }
